# zephyr-usb-midi

./: .gitignore  CMakeLists.txt  Kconfig  LICENSE  NOTES.md  README.md  TODO.md  build_sample_nrf52840dk.sh  build_sample_stm32f4disco.sh  notes.txt  prj.conf
doc/: USB in a NutShell - Chapter 1 - Introduction.webloc  usbd-midi:midi_device.rs at master · btrepp:usbd-midi · GitHub.webloc
src/: main.c  usb_midi.c  usb_midi.h  usb_midi_internal.h
src/usb_midi/: usb_midi.c  usb_midi.h  usb_midi_internal.h  usb_midi_packet.c  usb_midi_packet.h
test/: run_tests.sh  usb_midi_packet_test.c
usb_midi/: CMakeLists.txt  Kconfig
usb_midi/include/usb_midi/: usb_midi.h
usb_midi/src/: usb_midi.c  usb_midi_internal.h  usb_midi_macros.h  usb_midi_packet.c  usb_midi_packet.h  usb_midi_types.h
zephyr/: module.yml
zephyr-usb-midi/: CMakeLists.txt  Kconfig
zephyr-usb-midi/src/: usb_midi.c  usb_midi_internal.h  usb_midi_packet.c
